로그아웃 수정

--- a/map.html
+++ b/map.html
@@ -210,7 +210,7 @@
                       fill="currentColor"
                       viewBox="0 0 18 20"
                     ></svg>
-                    <span id="#logout_btn" class="flex-1 ml-3 whitespace-nowrap">로그아웃</span>
+                    <div id="#logout_btn" class="flex-1 ml-3 whitespace-nowrap">로그아웃</div>
                   </a>
                 </li>
               </ul>
