--- a/account/login.html
+++ b/account/login.html
@@ -32,14 +32,14 @@
                 <input type="checkbox" id="rememberId" class="mt-4 h-4 w-4 rounded border-gray-400 accent-yellow-300 mr-2">
                 <label for="rememberId" class="mt-3.5 text-black font-medium text-sm mr-16">로그인 유지하기</label>
      
-            <button type="submit" class="ml-10 text-black font-medium text-sm mt-3.5"><a href="/account/findPassword.html">비밀번호 찾기</a></button>
+            <button type="submit" class="ml-10 text-black font-medium text-sm mt-3.5"><a href="https://page.ppiyong.shop/account/findPassword.html">비밀번호 찾기</a></button>
         </div>
          <!-- 아직 삐용 회원이 아니신가요? -->
          <div class="text-black font-medium text-sm mt-20">
             아직 삐용 회원이 아니신가요?
         </div>
         <div class="text-black font-bold text-base mt-1 mb-1 border-b border-black" id="signup-link">
-            <a href="signup.html">회원가입 하기</a>
+            <a href="https://page.ppiyong.shop/account/signup.html">회원가입 하기</a>
         </div> <!--밑줄 간격이 1px이 최저라.. 우선은 이렇게-->     
     </div> 
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
