--- a/main.html
+++ b/main.html
@@ -45,7 +45,10 @@
           >
             <!-- 로고 이미지 삽입 -->
             <div class="flex items-center justify-center">
-              <a href="https://page.ppiyong.shop/main.html" class="flex items-center">
+              <a
+                href="https://page.ppiyong.shop/main.html"
+                class="flex items-center"
+              >
                 <img src="../img/logo.png" class="w-24 h-9 mr-10" />
               </a>
             </div>
@@ -223,7 +226,9 @@
                   fill="currentColor"
                   viewBox="0 0 18 20"
                 ></svg>
-                <span id="logout_btn" class="flex-1 ml-3 whitespace-nowrap">로그아웃</span>
+                <span id="logout_btn" class="flex-1 ml-3 whitespace-nowrap"
+                  >로그아웃</span
+                >
               </a>
             </li>
           </ul>
@@ -274,7 +279,7 @@
         </div>
       </div>
 
-      <div class="flex justify-center">
+      <div class="flex flex-col items-cente w-80">
         <div id="Button" class="flex items-center justify-center mt-3 w-80">
           <!--날씨 버튼-->
           <div
