Design : main 수정

--- a/main.html
+++ b/main.html
@@ -279,7 +279,7 @@
         </div>
       </div>
 
-      <div class="flex flex-col items-cente w-80">
+      <div class="flex flex-col items-center justify-center">
         <div id="Button" class="flex items-center justify-center mt-3 w-80">
           <!--날씨 버튼-->
           <div
