--- a/map.html
+++ b/map.html
@@ -199,7 +199,7 @@
                   </a>
                 </li>
                 <li>
-                  <a
+                  <button id="logout_btn"
                     href="#"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
                   >
@@ -210,8 +210,8 @@
                       fill="currentColor"
                       viewBox="0 0 18 20"
                     ></svg>
-                    <div id="#logout_btn" class="flex-1 ml-3 whitespace-nowrap">로그아웃</div>
-                  </a>
+                    <div class="flex-1 ml-3 whitespace-nowrap">로그아웃</div>
+                  </ㅠ>
                 </li>
               </ul>
             </div>
