--- a/checklist/typhoon.html
+++ b/checklist/typhoon.html
@@ -9,7 +9,7 @@
 
     <title>main</title>
     <link rel="stylesheet" href="../css/config.css" />
-    <script src="./js/isLoggedin.js"></script>
+    
   </head>
 
   <body>
@@ -21,7 +21,10 @@
           >
             <!-- 로고 이미지 삽입 -->
             <div class="flex items-center justify-center">
-              <a href="main.html" class="flex items-center">
+              <a
+                href="https://page.ppiyong.shop/main.html"
+                class="flex items-center"
+              >
                 <img src="../img/logo.png" class="w-24 h-9 mr-10" />
               </a>
             </div>
@@ -30,7 +33,7 @@
                 id="login-nav"
                 class="flex items-center justify-end text-end"
               >
-                <a href="alarm/alarm.html"
+                <a href="https://page.ppiyong.shop/alarm/alarm.html"
                   ><img src="../img/icon/알림.png" class="w-6 h-6 mt-3 mr-3"
                 /></a>
                 <div class="username-text font-medium text-lg mt-1 mr-6">
@@ -54,12 +57,12 @@
 
               <div id="non-login-nav" class="flex justify-end">
                 <div class="w-20 h-8 text-center p-1 ml-14">
-                  <a href="account/login.html">
+                  <a href="https://page.ppiyong.shop/account/login.html">
                     <button>로그인</button>
                   </a>
                 </div>
                 <div class="bg-yellow-300 w-20 h-8 rounded text-center p-1">
-                  <a href="account/signup.html">
+                  <a href="https://page.ppiyong.shop/account/signup.html">
                     <button>회원가입</button>
                   </a>
                 </div>
@@ -73,15 +76,15 @@
             class="max-w-screen-xl flex flex-wrap items-center justify-around mx-auto p-3 pb-0"
           >
             <button id="home-href">
-              <a href="main.html">홈</a>
+              <a href="https://page.ppiyong.shop/main.html">홈</a>
               <div class="bg-mySky p-1 h-3"></div>
             </button>
             <button id="shelter-href">
-              <a href="map.html">주변 대피소</a>
+              <a href="https://page.ppiyong.shop/map.html">주변 대피소</a>
               <div class="bg-mySky p-1 h-3"></div>
             </button>
-            <button id="checklist-href" class="font-bold">
-              <a href="checklist.html">체크리스트</a>
+            <button id="checklist-href " class="font-bold">
+              <a href="https://page.ppiyong.shop/checklist.html">체크리스트</a>
               <div
                 class="under-nav bg-mySky p-1 h-3 border-b-4 border-yellow-300 border-7"
               ></div>
@@ -140,7 +143,7 @@
             </li>
             <li>
               <a
-                href="myChecklist.html"
+                href="https://page.ppiyong.shop/myChecklist.html"
                 class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
               >
                 <svg
@@ -155,7 +158,7 @@
             </li>
             <li>
               <a
-                href="/account/select_region.html"
+                href="https://page.ppiyong.shop/alarm/select_other.html"
                 class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
               >
                 <svg
@@ -172,7 +175,7 @@
             </li>
             <li>
               <a
-                href="account/editMember.html"
+                href="https://page.ppiyong.shop/account/editMember.html"
                 class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
               >
                 <svg
@@ -199,7 +202,7 @@
                   fill="currentColor"
                   viewBox="0 0 18 20"
                 ></svg>
-                <span id="logout_btn" class="flex-1 ml-3 whitespace-nowrap">로그아웃</span>
+                <span class="flex-1 ml-3 whitespace-nowrap">로그아웃</span>
               </a>
             </li>
           </ul>
@@ -273,6 +276,8 @@
       crossorigin="anonymous"
     ></script>
     <script src="../js/checklist_detail.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="./js/isLoggedin.js"></script>
     <script>
       Kakao.init("84006249f39045b05f2da9f99f8320ca");
     </script>
