Feat : 체크리스트 내비바 수정

--- a/checklist/snow.html
+++ b/checklist/snow.html
@@ -276,7 +276,7 @@
     ></script>
     <script src="../js/checklist_detail.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="./js/isLoggedin.js"></script>
+    <script src="../js/isLoggedin.js"></script>
     <script>
       Kakao.init("84006249f39045b05f2da9f99f8320ca");
     </script>
