feat: account 링크

--- a/account/changePassword.html
+++ b/account/changePassword.html
@@ -11,7 +11,7 @@
 <body class="flex flex-col items-center mt-8">
     <!-- 로고 이미지 삽입 -->
     <div class="flex items-center justify-center mb-10">
-        <a href="#" class="flex items-center">
+        <a href="https://page.ppiyong.shop/main.html" class="flex items-center">
             <img src="../img/logo.png" class="w-24 h-9 mr-3" />
           </a>
         <!-- 삐용 이미지 -->
