--- a/account/login.html
+++ b/account/login.html
@@ -11,7 +11,7 @@
     <div class="flex flex-col items-center">
         <!-- 로고 이미지 삽입 -->
         <div class="flex items-center">
-            <a href="#" class="flex items-center">
+            <a href="https://page.ppiyong.shop/main.html" class="flex items-center">
                 <img src="../img/logo.png" class="w-24 h-9 mr-3" />
               </a>
         </div>
