--- a/map.html
+++ b/map.html
@@ -198,8 +198,8 @@
                     >
                   </a>
                 </li>
-                <li>
-                  <button id="logout_btn"
+                <li class="logout_btn">
+                  <a
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
                   >
                     <svg
@@ -210,7 +210,7 @@
                       viewBox="0 0 18 20"
                     ></svg>
                     <div class="flex-1 ml-3 whitespace-nowrap">로그아웃</div>
-                  </button>
+                  </a>
                 </li>
               </ul>
             </div>
