--- a/map.html
+++ b/map.html
@@ -262,8 +262,8 @@
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="../js/map.js"></script>
-    <!-- <script src="../js/isLoggedin.js"></script> -->
-    <script src="../js/logoutTest.js"></script>
+    <script src="../js/isLoggedin.js"></script>
+    
 </body>
 
 </html>
