로그아웃 수정

--- a/alarm/select_other.html
+++ b/alarm/select_other.html
@@ -179,9 +179,8 @@
                   <span class="flex-1 ml-3 whitespace-nowrap">MY 체크리스트</span>
                 </a>
               </li>
-              <li>
+              <li class="logout_btn">
                 <a
-                  href="https://page.ppiyong.shop/alarm/select_other.html"
                   class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
                 >
                   <svg
@@ -189,11 +188,9 @@
                     aria-hidden="true"
                     xmlns="http://www.w3.org/2000/svg"
                     fill="currentColor"
-                    viewBox="0 0 20 20"
+                    viewBox="0 0 18 20"
                   ></svg>
-                  <span class="flex-1 ml-3 whitespace-nowrap"
-                    >다른 지역 확인하기</span
-                  >
+                  <div class="flex-1 ml-3 whitespace-nowrap">로그아웃</div>
                 </a>
               </li>
               <li>
