--- a/alarm/select_region.html
+++ b/alarm/select_region.html
@@ -191,9 +191,8 @@
                 >
               </a>
             </li>
-            <li>
+            <li class="logout_btn">
               <a
-                href="#"
                 class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
               >
                 <svg
@@ -203,7 +202,7 @@
                   fill="currentColor"
                   viewBox="0 0 18 20"
                 ></svg>
-                <span class="flex-1 ml-3 whitespace-nowrap">로그아웃</span>
+                <div class="flex-1 ml-3 whitespace-nowrap">로그아웃</div>
               </a>
             </li>
           </ul>
