--- a/map.html
+++ b/map.html
@@ -85,12 +85,12 @@
             </button>
             <button id="shelter-href">
               <a href="https://page.ppiyong.shop/map.html">주변 대피소</a>
-              <div class="bg-mySky p-1 h-3"></div>
+              <div class="under-nav bg-mySky p-1 h-3 border-b-4 border-yellow-300 border-7"></div>
             </button>
             <button id="checklist-href " class="font-bold">
               <a href="https://page.ppiyong.shop/checklist.html">체크리스트</a>
               <div
-                class="under-nav bg-mySky p-1 h-3 border-b-4 border-yellow-300 border-7"
+                class="bg-mySky p-1 h-3"
               ></div>
             </button>
           </div>
