--- a/checklist.html
+++ b/checklist.html
@@ -209,7 +209,7 @@
             </li>
           </ul>
         </div>
-      </div>  
+      </div>
 
       <div class="cehcklist-content p-5">
         <div class="title flex justify-between">
@@ -231,9 +231,11 @@
         </p>
       </div>
 
-      <div class="buttons grid gap-4 grid-cols-3 grid-rows-2">
+      <div
+        class="buttons grid gap-4 grid-cols-3 grid-rows-2 flex justify-center ml-1"
+      >
         <div
-          class="bg-white w-24 h-24 rounded shadow mr-1 flex justify-center items-center"
+          class="bg-white w-24 h-24 rounded shadow flex justify-center items-center"
         >
           <a href="checklist/rain.html">
             <div class="block justify-center items-center">
@@ -249,7 +251,7 @@
         </div>
 
         <div
-          class="bg-white w-24 h-24 rounded shadow mr-1 flex justify-center items-center"
+          class="bg-white w-24 h-24 rounded shadow flex justify-center items-center"
         >
           <a href="checklist/tsunami.html">
             <div class="block justify-center items-center">
@@ -265,7 +267,7 @@
         </div>
 
         <div
-          class="bg-white w-24 h-24 rounded shadow mr-1 flex justify-center items-center"
+          class="bg-white w-24 h-24 rounded shadow flex justify-center items-center"
         >
           <a href="checklist/typhoon.html">
             <div class="block justify-center items-center">
@@ -281,7 +283,7 @@
         </div>
 
         <div
-          class="bg-white w-24 h-24 rounded shadow mr-1 flex justify-center items-center"
+          class="bg-white w-24 h-24 rounded shadow flex justify-center items-center"
         >
           <a href="checklist/heat.html">
             <div class="block justify-center items-center">
@@ -297,7 +299,7 @@
         </div>
 
         <div
-          class="bg-white w-24 h-24 rounded shadow mr-1 flex justify-center items-center"
+          class="bg-white w-24 h-24 rounded shadow flex justify-center items-center"
         >
           <a href="checklist/snow.html">
             <div class="block justify-center items-center">
@@ -313,7 +315,7 @@
         </div>
 
         <div
-          class="bg-white w-24 h-24 rounded shadow mr-1 flex justify-center items-center"
+          class="bg-white w-24 h-24 rounded shadow flex justify-center items-center"
         >
           <a href="checklist/safety.html">
             <div class="block justify-center items-center">
@@ -329,9 +331,9 @@
         </div>
       </div>
 
-      <div class="my-checklist">
+      <div class="mx-1 flex justify-center items-center my-checklist">
         <div
-          class="bg-white w-80 h-24 rounded shadow flex justify-center items-center mt-4"
+          class="bg-white w-full h-24 rounded shadow flex justify-center items-center mt-4"
         >
           <div class="block justify-center items-center">
             <a href="/myChecklist.html">
