--- a/account/editMember.html
+++ b/account/editMember.html
@@ -78,7 +78,7 @@
       style="margin-left: -10px;"
       required
     >
-    <option id="regionDisplay" value=""  selected>${memberData.region}</option>
+    <option id="regionDisplay" value=""  selected></option>
     <option value="강원특별자치도">강원특별자치도</option>
     <option value="경기도">경기도</option>
     <option value="광주광역시">광주광역시</option>
