--- a/map.html
+++ b/map.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="ko">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -9,13 +8,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.5/flowbite.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.10/clipboard.min.js"></script>
 
-
     <title>삐용</title>
     <!-- <link rel="stylesheet" href="/css/config.css" /> -->
     <link rel="stylesheet" href="/css/map.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <!--header-->
     <div class="relative content bg-gray-50 border-white">
       <div class="bg-white border-gray-200 shadow">
@@ -85,63 +83,94 @@
             </button>
             <button id="shelter-href">
               <a href="https://page.ppiyong.shop/map.html">주변 대피소</a>
-              <div class="under-nav bg-mySky p-1 h-3 border-b-4 border-yellow-300 border-7"></div>
+              <div
+                class="under-nav bg-mySky p-1 h-3 border-b-4 border-yellow-300 border-7"
+              ></div>
             </button>
             <button id="checklist-href " class="font-bold">
               <a href="https://page.ppiyong.shop/checklist.html">체크리스트</a>
-              <div
-                class="bg-mySky p-1 h-3"
-              ></div>
+              <div class="bg-mySky p-1 h-3"></div>
             </button>
           </div>
 
           <div class="searchMain_nav_underline"></div>
         </nav>
       </div>
-            <!--main-->
-            <div class="bg-gray-50" id="main">
-                <div class="ml-5 mr-5 mb-5 mt-2">
-                    <div class="address">
-                    <div class="font-bold text-2xl" id="current_city">현재 지역</div>
-                    <div class="text-lg mt-1">주변 대피소를 확인해보세요.</div>
-                    </div>
-                    <div class="flex mb-2 mt-2 mb-1">
+      <!--main-->
+      <div class="bg-gray-50" id="main">
+        <div class="ml-5 mr-5 mb-5 mt-2">
+          <div class="address">
+            <div class="font-bold text-2xl" id="current_city">현재 지역</div>
+            <div class="text-lg mt-1">주변 대피소를 확인해보세요.</div>
+          </div>
+          <div class="flex mb-2 mt-2 mb-1">
+            <button
+              id="all"
+              class="h-8 bg-gray-600 item-center rounded-full text-xs px-4 p-2 text-white font-bold"
+              onclick="go()"
+            >
+              전체
+            </button>
+            <button
+              id="earth"
+              class="h-8 bg-yellow-600 item-center rounded-full text-xs ml-5 px-4 p-2 text-white font-bold"
+              onclick="earthquake()"
+            >
+              지진/해일
+            </button>
+            <button
+              id="civil"
+              class="h-8 bg-red-400 item-center rounded-full text-xs ml-5 px-4 p-2 text-white font-bold"
+              onclick="civil()"
+            >
+              민방위
+            </button>
+          </div>
 
-                        <button id="all"
-                            class="h-8 bg-gray-600 item-center rounded-full text-xs px-4 p-2 text-white font-bold" onclick="go()">전체</button>
-                        <button id="earth"
-                            class="h-8 bg-yellow-600 item-center rounded-full text-xs ml-5 px-4 p-2 text-white font-bold" onclick="earthquake()">지진/해일</button>
-                        <button id="civil"
-                            class="h-8 bg-red-400 item-center rounded-full text-xs ml-5 px-4 p-2 text-white font-bold" onclick="civil()">민방위</button>
-                    </div>
-
-                    <div id="map" style="width: 100%; height: 72vh;"></div>
-                </div>
-                <div id="modal" class="bg-white">
-                        <div class="content_map">
-                        <div class="ml-auto">
-                            <button onclick="out()" class="p-2">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" viewBox="0 0 14 14"
-                                    fill="none">
-                                    <path d="M1 1L13 13M1 13L13 1L1 13Z" stroke="#3F3F46" stroke-width="2"
-                                        stroke-linecap="round" stroke-linejoin="round" />
-                                </svg>
-                            </button>
-                        </div>
-                            <div id="name" class="ml-5 text-2xl font-bold mb-2"></div>
-                            <div id="value"><button id="category_btn" class="h-8 bg-black ">제발 나와줘 ㅜㅜ</button></div>
-                            <div id="address">
-                                <div class="flex ml-5 mb-5">
-                                    <div id="textArea" class="mt-1"></div>
-                                    <button id="btn" data-clipboard-target="#textArea" class="ml-2 p-1 rounded bg-gray-600 text-white text-sm pl-2 pr-2 pt-1 pb-1">복사</button>
-                                </div>
-                            </div>
-                        </div>
-                </div>
-            </div>
+          <div id="map" style="width: 100%; height: 72vh"></div>
         </div>
-
-
+        <div id="modal" class="bg-white">
+          <div class="content_map">
+            <div class="ml-auto">
+              <button onclick="out()" class="p-2">
+                <svg
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="14"
+                  height="14"
+                  viewBox="0 0 14 14"
+                  fill="none"
+                >
+                  <path
+                    d="M1 1L13 13M1 13L13 1L1 13Z"
+                    stroke="#3F3F46"
+                    stroke-width="2"
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                  />
+                </svg>
+              </button>
+            </div>
+            <div id="name" class="ml-5 text-2xl font-bold mb-2"></div>
+            <div id="value">
+              <button id="category_btn" class="h-8 bg-black">
+                제발 나와줘 ㅜㅜ
+              </button>
+            </div>
+            <div id="address">
+              <div class="flex ml-5 mb-5">
+                <div id="textArea" class="mt-1"></div>
+                <button
+                  id="btn"
+                  data-clipboard-target="#textArea"
+                  class="ml-2 p-1 rounded bg-gray-600 text-white text-sm pl-2 pr-2 pt-1 pb-1"
+                >
+                  복사
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script
@@ -149,13 +178,12 @@
       defer
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB12bgQnvBrc0Hwuztjrqpxvv7vEHvcf0U"
     ></script>
-  
-    <script type="text/javascript"
-        src="//dapi.kakao.com/v2/maps/sdk.js?appkey=122a12ac53dfd9ece5eb472180241e53"></script>
-    <script src="../js/map.js"></script>
-    <script src="../js/isLoggedin.js"></script>
-    
-    
-</body>
 
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=122a12ac53dfd9ece5eb472180241e53"
+    ></script>
+    <script src="../js/jmap.js"></script>
+    <script src="../js/isLoggedin.js"></script>
+  </body>
 </html>
