--- a/alarm/alarm.html
+++ b/alarm/alarm.html
@@ -78,29 +78,6 @@
             </div>
           </div>
         </nav>
-        <nav>
-          <div
-            id="searchNav-item"
-            class="max-w-screen-xl flex flex-wrap items-center justify-around mx-auto p-3 pb-0"
-          >
-            <button id="home-href">
-              <a href="https://page.ppiyong.shop/main.html">홈</a>
-              <div class="bg-mySky p-1 h-3"></div>
-            </button>
-            <button id="shelter-href">
-              <a href="https://page.ppiyong.shop/map.html">주변 대피소</a>
-              <div class="bg-mySky p-1 h-3"></div>
-            </button>
-            <button id="checklist-href " class="font-bold">
-              <a href="https://page.ppiyong.shop/checklist.html">체크리스트</a>
-              <div
-                class="under-nav bg-mySky p-1 h-3 border-b-4 border-yellow-300 border-7"
-              ></div>
-            </button>
-          </div>
-
-          <div class="searchMain_nav_underline"></div>
-        </nav>
       </div>
       <!-- drawer component -->
       <div
@@ -232,7 +209,7 @@
                     <div class="ml-1 pt-1" id="alarm_num">
                     </div>
                     <div class="bg-gray-600 w-11 h-7 rounded text-center text-white ml-5 pt-1">
-                        <a href="/alarm/select_region.html">설정</a>
+                        <a href="https://page.ppiyong.shop/alarm/select_region.html">설정</a>
                     </div>
                 </div>
             </div>
