--- a/alarm/select_other.html
+++ b/alarm/select_other.html
@@ -268,6 +268,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="../js/select_other.js"></script>
     <script src="../js/isLoggedin.js"></script>
+    <script src="../js/logoutTest.js"></script> 
 </body>
 
 </html>
