--- a/alarm/select_region.html
+++ b/alarm/select_region.html
@@ -239,6 +239,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="../js/selec_region.js"></script>
     <script src="../js/isLoggedin.js"></script>
+    <script src="../js/logoutTest.js"></script> 
     
 </body>
 
