로그아웃 링크

--- a/checklist/safety.html
+++ b/checklist/safety.html
@@ -272,7 +272,8 @@
       integrity="sha384-70k0rrouSYPWJt7q9rSTKpiTfX6USlMYjZUtr1Du+9o4cGvhPAWxngdtVZDdErlh"
       crossorigin="anonymous"
     ></script>
-    <script src="../js/isLoggedin.js"></script>
+    <script src="./js/isLoggedin.js"></script>
+    <script src="../js/logoutTest.js"></script> 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     
     <script src="../js/checklist_detail.js"></script>
