--- a/mainDetail.html
+++ b/mainDetail.html
@@ -276,5 +276,6 @@
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="../js/mainDetail.js"></script>
     <script src="./js/isLoggedin.js"></script>
+    <script src="../js/logoutTest.js"></script> 
   </body>
 </html>
