--- a/myChecklist.html
+++ b/myChecklist.html
@@ -12,7 +12,7 @@
     <script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
     <title>삐용</title>
     <link rel="stylesheet" href="../css/config.css" />
-    <script src="./js/isLoggedin.js"></script>
+   
   </head>
 
   <body>
@@ -283,5 +283,7 @@
         </div>
       </div>
     </div>
+    <script src="./js/isLoggedin.js"></script>
+    <script src="../js/logoutTest.js"></script> 
   </body>
 </html>
