--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB12bgQnvBrc0Hwuztjrqpxvv7vEHvcf0U"
     ></script>
     <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="./js/isLoggedin.js"></script>
+  
 
     <title>삐용</title>
     <link rel="stylesheet" href="../css/config.css" />
@@ -338,6 +338,7 @@
       </div>
     </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="../js/main.js"></script>
+    <script src="./js/isLoggedin.js"></script>
+    <script src="../js/logoutTest.js"></script> 
   </body>
 </html>
