--- a/main.html
+++ b/main.html
@@ -340,5 +340,6 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="./js/isLoggedin.js"></script>
     <script src="../js/logoutTest.js"></script> 
+    <script src="../js/main.js"></script> 
   </body>
 </html>
