--- a/checklist.html
+++ b/checklist.html
@@ -219,7 +219,7 @@
               <span class="font-bold">대비</span>해 보세요
             </p>
           </div>
-          <div><img src="../img/icon/checklist_icon.png"</div>
+          <div><img src="../img/icon/checklist_icon.png"></div>
         </div>
       </div>
 
