--- a/map.html
+++ b/map.html
@@ -83,18 +83,131 @@
             </button>
             <button id="shelter-href" class="font-bold">
               <a href="https://page.ppiyong.shop/map.html">주변 대피소</a>
-              <div
-                class="under-nav bg-mySky p-1 h-3 border-b-4 border-yellow-300 border-7"
-              ></div>
+              <div class="under-nav bg-mySky p-1 h-3 border-b-4 border-yellow-300 border-7"></div>
             </button>
             <button id="checklist-href ">
               <a href="https://page.ppiyong.shop/checklist.html">체크리스트</a>
-              <div class="bg-mySky p-1 h-3"></div>
+              <div
+                class="bg-mySky p-1 h-3"
+              ></div>
             </button>
           </div>
 
           <div class="searchMain_nav_underline"></div>
         </nav>
+      </div>
+      <!-- drawer component -->
+      <div
+        id="drawer-navigation"
+        class="fixed top-0 left-0 z-40 w-64 h-screen p-4 overflow-y-auto transition-transform -translate-x-full bg-white dark:bg-gray-800"
+        tabindex="-1"
+        aria-labelledby="drawer-navigation-label"
+      >
+        <button
+          type="button"
+          data-drawer-hide="drawer-navigation"
+          aria-controls="drawer-navigation"
+          class="text-gray-400 bg-transparent hover:bg-gray-200 hover:text-gray-900 rounded-lg text-sm p-1.5 absolute top-2.5 right-2.5 inline-flex items-center dark:hover:bg-gray-600 dark:hover:text-white"
+        >
+          <svg
+            aria-hidden="true"
+            class="w-5 h-5"
+            fill="currentColor"
+            viewBox="0 0 20 20"
+            xmlns="http://www.w3.org/2000/svg"
+          >
+            <path
+              fill-rule="evenodd"
+              d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+              clip-rule="evenodd"
+            ></path>
+          </svg>
+          <span class="sr-only">Close menu</span>
+        </button>
+        <div class="py-4 overflow-y-auto">
+          <ul class="space-y-2">
+            <li>
+              <a
+                class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white"
+              >
+                <svg
+                  class="w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="currentColor"
+                  viewBox="0 0 22 21"
+                ></svg>
+                <span class="username-text mt-10 font-bold text-2xl"
+                  >강윤진</span
+                >
+                <span class="mt-10 font-medium text-2xl">님</span>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://page.ppiyong.shop/myChecklist.html"
+                class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
+              >
+                <svg
+                  class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="currentColor"
+                  viewBox="0 0 18 18"
+                ></svg>
+                <span class="flex-1 ml-3 whitespace-nowrap">MY 체크리스트</span>
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://page.ppiyong.shop/alarm/select_other.html"
+                class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
+              >
+                <svg
+                  class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="currentColor"
+                  viewBox="0 0 20 20"
+                ></svg>
+                <span class="flex-1 ml-3 whitespace-nowrap"
+                  >다른 지역 확인하기</span
+                >
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://page.ppiyong.shop/account/editMember.html"
+                class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
+              >
+                <svg
+                  class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="currentColor"
+                  viewBox="0 0 20 18"
+                ></svg>
+                <span class="flex-1 ml-3 whitespace-nowrap"
+                  >회원정보 수정하기</span
+                >
+              </a>
+            </li>
+            <li class="logout_btn">
+              <a
+                class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
+              >
+                <svg
+                  class="flex-shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
+                  aria-hidden="true"
+                  xmlns="http://www.w3.org/2000/svg"
+                  fill="currentColor"
+                  viewBox="0 0 18 20"
+                ></svg>
+                <div class="flex-1 ml-3 whitespace-nowrap">로그아웃</div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
       <!--main-->
       <div class="bg-gray-50" id="main">
