design : 메인 디테일

--- a/mainDetail.html
+++ b/mainDetail.html
@@ -73,19 +73,19 @@
             id="searchNav-item"
             class="max-w-screen-xl flex flex-wrap items-center justify-around mx-auto p-3 pb-0"
           >
-            <button id="home-href">
+            <button id="home-href" class="font-bold">
               <a href="https://page.ppiyong.shop/main.html">홈</a>
-              <div class="bg-mySky p-1 h-3"></div>
               <div
-              class="under-nav bg-mySky p-1 h-3 border-b-4 border-yellow-300 border-7"
-            ></div>
+                class="under-nav bg-mySky p-1 h-3 border-b-4 border-yellow-300 border-7"
+              ></div>
             </button>
             <button id="shelter-href">
               <a href="https://page.ppiyong.shop/map.html">주변 대피소</a>
               <div class="bg-mySky p-1 h-3"></div>
             </button>
-            <button id="checklist-href " class="font-bold">
+            <button id="checklist-href">
               <a href="https://page.ppiyong.shop/checklist.html">체크리스트</a>
+              <div class="bg-mySky p-1 h-3"></div>
             </button>
           </div>
 
@@ -154,8 +154,9 @@
                 <span class="flex-1 ml-3 whitespace-nowrap">MY 체크리스트</span>
               </a>
             </li>
-            <li class="logout_btn">
+            <li>
               <a
+                href="https://page.ppiyong.shop/alarm/select_other.html"
                 class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
               >
                 <svg
@@ -163,9 +164,11 @@
                   aria-hidden="true"
                   xmlns="http://www.w3.org/2000/svg"
                   fill="currentColor"
-                  viewBox="0 0 18 20"
+                  viewBox="0 0 20 20"
                 ></svg>
-                <div class="flex-1 ml-3 whitespace-nowrap">로그아웃</div>
+                <span class="flex-1 ml-3 whitespace-nowrap"
+                  >다른 지역 확인하기</span
+                >
               </a>
             </li>
             <li>
@@ -185,9 +188,8 @@
                 >
               </a>
             </li>
-            <li>
+            <li class="logout_btn">
               <a
-                href="#"
                 class="flex items-center p-2 text-gray-900 rounded-lg dark:text-white hover:bg-gray-100 dark:hover:bg-gray-700 group"
               >
                 <svg
@@ -197,7 +199,7 @@
                   fill="currentColor"
                   viewBox="0 0 18 20"
                 ></svg>
-                <span class="flex-1 ml-3 whitespace-nowrap">로그아웃</span>
+                <div class="flex-1 ml-3 whitespace-nowrap">로그아웃</div>
               </a>
             </li>
           </ul>
