design 체크리스트

--- a/checklist/heat.html
+++ b/checklist/heat.html
@@ -209,7 +209,7 @@
       </div>
 
       <div class="cehcklist-content p-5">
-        <div class="content-title flex justify-between">
+        <div class="content-title flex justify-between mb-5">
           <div>
             <p class="text-2xl">
               <span class="font-bold">폭염</span> <br />
@@ -218,17 +218,17 @@
           </div>
         </div>
 
-        <div class="main-article pt-4">
-              1. 무더위에는 카페인이 들어간 음료나 주류는 삼가고, 생수나 이온음료를 마시는 것이 좋다. <br>
-          2. 더위로 인한 질병(땀띠, 열경련, 열사병, 울열증, 화상)에 대한 증상과 대처방법을 사전에 알아둔다.<br>
-          3. 창문이 닫힌 자동차 안에는 노약자나 어린이를 홀로 남겨두지 않는다.<br>
-          4. 현기증, 메스꺼움, 두통, 근육경련 등의 증세가 보이는 경우에는 시원한 곳으로 이동하여 휴식을 취하고 시원한 음료를 천천히 마신다.<br>
-          5. 휴식시간은 장시간 한 번에 쉬기보다는 짧게 자주 갖는 것이 좋다. <br>
-          6. 냉방이 되지 않는 실내에서는 햇볕이 실내에 들어오지 않도록 하고, 환기가 잘 되도록 선풍기를 켜고 창문이나 출입문을 열어둔다. <br>
-          7. 외부에 외출 중인 경우나 자택에 냉방기가 설치되어 있지 않은 경우 가장 더운 시간에는 인근 무더위쉼터로 이동하여 더위를 피한다. 무더위쉼터는 안전디딤돌 앱, 시군구 홈페이지 등에서 확인할 수 있으며 평소에 위치를 확인해 둔다.<br>
-          8. 열사병은 심한 두통, 오한, 빈맥, 빈호흡, 저혈압을 유발하며 환자의 옷을 느슨하게 하고 환자의 몸에 시원한 물을 적셔 부채나 선풍기 등으로 몸을 식혀 대처한다.<br>
-          9. 열실신은 주로 앉아있거나 누워있는 상태에서 갑자기 일어나거나 오래 서 있을 때 발생하는데, 시원한 장소로 옮겨 다리를 머리보다 높게 올리도록 하며 의사소통이 가능할 경우엔 물을 천천히 마시게 한다.<br>
-          10. 열경련시에는 경련이 일어난 곳을 마사지해주준다. 1시간 넘게 경련이 지속되는 경우, 기저질환으로 심장질환이 있는 경우, 평상시 저염분 식이요법을 한 경우에는 바로 응급실에 방문하여 진료를 받는다.<br>
+        <div class="main-article pt-4 mb-5">
+          ✔ 무더위에는 카페인이 들어간 음료나 주류는 삼가고, 생수나 이온음료를 마시는 것이 좋다. <br>
+          ✔ 더위로 인한 질병(땀띠, 열경련, 열사병, 울열증, 화상)에 대한 증상과 대처방법을 사전에 알아둔다.<br>
+          ✔ 창문이 닫힌 자동차 안에는 노약자나 어린이를 홀로 남겨두지 않는다.<br>
+          ✔ 현기증, 메스꺼움, 두통, 근육경련 등의 증세가 보이는 경우에는 시원한 곳으로 이동하여 휴식을 취하고 시원한 음료를 천천히 마신다.<br>
+          ✔ 휴식시간은 장시간 한 번에 쉬기보다는 짧게 자주 갖는 것이 좋다. <br>
+          ✔ 냉방이 되지 않는 실내에서는 햇볕이 실내에 들어오지 않도록 하고, 환기가 잘 되도록 선풍기를 켜고 창문이나 출입문을 열어둔다. <br>
+          ✔ 외부에 외출 중인 경우나 자택에 냉방기가 설치되어 있지 않은 경우 가장 더운 시간에는 인근 무더위쉼터로 이동하여 더위를 피한다. 무더위쉼터는 안전디딤돌 앱, 시군구 홈페이지 등에서 확인할 수 있으며 평소에 위치를 확인해 둔다.<br>
+          ✔ 열사병은 심한 두통, 오한, 빈맥, 빈호흡, 저혈압을 유발하며 환자의 옷을 느슨하게 하고 환자의 몸에 시원한 물을 적셔 부채나 선풍기 등으로 몸을 식혀 대처한다.<br>
+          ✔ 열실신은 주로 앉아있거나 누워있는 상태에서 갑자기 일어나거나 오래 서 있을 때 발생하는데, 시원한 장소로 옮겨 다리를 머리보다 높게 올리도록 하며 의사소통이 가능할 경우엔 물을 천천히 마시게 한다.<br>
+          ✔. 열경련시에는 경련이 일어난 곳을 마사지해주준다. 1시간 넘게 경련이 지속되는 경우, 기저질환으로 심장질환이 있는 경우, 평상시 저염분 식이요법을 한 경우에는 바로 응급실에 방문하여 진료를 받는다.<br>
           
         </div>
 
