--- a/checklist/snow.html
+++ b/checklist/snow.html
@@ -206,7 +206,7 @@
         </div>
       </div>
       <div class="cehcklist-content p-5">
-        <div class="content-title flex justify-between">
+        <div class="content-title flex justify-between mb-5">
           <div>
             <p class="text-2xl">
               <span class="font-bold">대설</span> <br />
@@ -215,17 +215,17 @@
           </div>
         </div>
 
-        <div class="main-article pt-4">
-          1. 눈사태 위험지역, 노후주택 등 붕괴 위험이 있는 건물의 주민은 주변에 있는 사람들에게 알려주고 위험지역에 있는 사람들과 함께 안전한 곳으로 이동 준비를 한다.<br>
-          2. 스노체인, 염화칼슘, 삽 등 자동차 월동용품을 준비한다<br>
-          3. 차량이 고립·정체된 경우 가능한 수단을 통해 구조 연락을 취하고, 동승자와 함께 체온을 유지하고 돌아가면서 휴식을 취하도록 한다.<br>
-          4. 차량이 고립·정체된 경우 한 사람은 반드시 깨어있어야 하며 야간에는 실내등을 켜거나 색깔 있는 옷을 눈 위에 펼쳐 놓아 구조요원이 쉽게 찾을 수 있도록 한다. <br>
-          5. 차량이 고립·정체된 경우 되도록 차량에서 대기하고, 부득이 차량을 벗어날 경우 연락처와 열쇠를 꽂아 둔 채로 대피한다.<br>
-          6. 상수도 공급이 중단될 수 있으므로, 욕조 등에 미리 물을 받아둔다.<br>
-          7. TV, 라디오, 인터넷, 스마트폰 등으로 기상상황을 미리 파악하여 언제, 어떻게, 누구와 무엇을 할 지를 준비한다.<br>
-          8. 외출 시에는 바닥면이 넓은 운동화나 등산화를 착용하고, 주머니에 손을 넣지 말고 보온 장갑 등을 착용하여 체온을 유지한다.<br>
-          9. 대피 후 집으로 돌아온 경우에는 노후주택 등은 안전에 위험이 있을 수 있으므로, 출입하기 전에 반드시 피해 여부를 확인한다.<br>
-          10. 대설로 가스가 누출될 수 있으므로 창문을 열어 충분히 환기하고, 성냥불이나 라이터는 환기 전까지 사용하지 않는다.<br>
+        <div class="main-article pt-4 mb-5">
+          ✔ 눈사태 위험지역, 노후주택 등 붕괴 위험이 있는 건물의 주민은 주변에 있는 사람들에게 알려주고 위험지역에 있는 사람들과 함께 안전한 곳으로 이동 준비를 한다.<br>
+          ✔ 스노체인, 염화칼슘, 삽 등 자동차 월동용품을 준비한다<br>
+          ✔ 차량이 고립·정체된 경우 가능한 수단을 통해 구조 연락을 취하고, 동승자와 함께 체온을 유지하고 돌아가면서 휴식을 취하도록 한다.<br>
+          ✔ 차량이 고립·정체된 경우 한 사람은 반드시 깨어있어야 하며 야간에는 실내등을 켜거나 색깔 있는 옷을 눈 위에 펼쳐 놓아 구조요원이 쉽게 찾을 수 있도록 한다. <br>
+          ✔ 차량이 고립·정체된 경우 되도록 차량에서 대기하고, 부득이 차량을 벗어날 경우 연락처와 열쇠를 꽂아 둔 채로 대피한다.<br>
+          ✔ 상수도 공급이 중단될 수 있으므로, 욕조 등에 미리 물을 받아둔다.<br>
+          ✔ TV, 라디오, 인터넷, 스마트폰 등으로 기상상황을 미리 파악하여 언제, 어떻게, 누구와 무엇을 할 지를 준비한다.<br>
+          ✔ 외출 시에는 바닥면이 넓은 운동화나 등산화를 착용하고, 주머니에 손을 넣지 말고 보온 장갑 등을 착용하여 체온을 유지한다.<br>
+          ✔ 대피 후 집으로 돌아온 경우에는 노후주택 등은 안전에 위험이 있을 수 있으므로, 출입하기 전에 반드시 피해 여부를 확인한다.<br>
+          ✔ 대설로 가스가 누출될 수 있으므로 창문을 열어 충분히 환기하고, 성냥불이나 라이터는 환기 전까지 사용하지 않는다.<br>
           
         </div>
 
