--- a/checklist/tsunami.html
+++ b/checklist/tsunami.html
@@ -206,7 +206,7 @@
       </div>
 
       <div class="cehcklist-content p-5">
-        <div class="content-title flex justify-between">
+        <div class="content-title flex justify-between mb-5">
           <div>
             <p class="text-2xl">
               <span class="font-bold">지진/해일</span> <br />
@@ -215,17 +215,17 @@
           </div>
         </div>
 
-        <div class="main-article pt-4">
-1. 탁자 아래와 같이 집 안에서 대피할 수 있는 안전한 대피 공간을 미리 확보해두고 유리창이나 넘어지기 쉬운 가구 주변 등에서 최대한 멀리 떨어진다.<br>
-2. 깨진 유리 등에 다치지 않도록 두꺼운 실내화를 준비해둔다.<br>
-3. 가구나 가전제품이 흔들릴 때 넘어지지 않도록 고정하고 창문 등의 유리 부분은 필름을 붙여 유리가 파손되지 않도록 한다.<br>
-4. 가스 및 전기를 미리 점검하고 건물의 균열을 발견하면 보수하고 보강한다.<br>
-5. 비상시 가족과 만날 곳과 연락할 방법을 정해두고 지진에 대비해 비상용품을 준비한다.<br>
-6. 자동차를 타고 있을 때 비상등을 켜고 서서히 속도를 줄여 도로 오른쪽에 차를 세우고 긴급차량을 위해 도로의 중앙부분을 비워둔다.<br>
-7. 전철을 타고 있을 때 전철 안의 손잡이나 기둥, 선반을 꼭 잡고 넘어지지 않도록 하고 전철이 멈췄다고 해서 서둘러 출구로 뛰어가는 것은 위험하므로 안내에 따라 행동한다.<br>
-8. 고층 건물에 있을 때 높은 층의 건물일수록 흔들림이 크게 오래 지속될 수 있으므로 실내에서 떨어지는 물건에 더욱 주의하여야 한다.<br>
-9. 해일 발생 시 1층보다는 2층, 2층보다는 3층, 때에 따라서는 지붕이 안전하니 높은 곳으로 이동하고 목조주택은 떠내려갈 가능성이 있으니 벽돌이나 철근콘크리트 건물로 이동한다.<br>
-10. 해안에서 멀리 떨어진 곳은 직접적인 파도의 영향이 없으므로 바닥에서 높이가 2~3m만 높아도 비교적 안전한다.<br>
+        <div class="main-article pt-4 mb-5">
+          ✔ 탁자 아래와 같이 집 안에서 대피할 수 있는 안전한 대피 공간을 미리 확보해두고 유리창이나 넘어지기 쉬운 가구 주변 등에서 최대한 멀리 떨어진다.<br>
+          ✔ 깨진 유리 등에 다치지 않도록 두꺼운 실내화를 준비해둔다.<br>
+          ✔ 가구나 가전제품이 흔들릴 때 넘어지지 않도록 고정하고 창문 등의 유리 부분은 필름을 붙여 유리가 파손되지 않도록 한다.<br>
+          ✔ 가스 및 전기를 미리 점검하고 건물의 균열을 발견하면 보수하고 보강한다.<br>
+          ✔ 비상시 가족과 만날 곳과 연락할 방법을 정해두고 지진에 대비해 비상용품을 준비한다.<br>
+          ✔ 자동차를 타고 있을 때 비상등을 켜고 서서히 속도를 줄여 도로 오른쪽에 차를 세우고 긴급차량을 위해 도로의 중앙부분을 비워둔다.<br>
+          ✔ 전철을 타고 있을 때 전철 안의 손잡이나 기둥, 선반을 꼭 잡고 넘어지지 않도록 하고 전철이 멈췄다고 해서 서둘러 출구로 뛰어가는 것은 위험하므로 안내에 따라 행동한다.<br>
+          ✔ 고층 건물에 있을 때 높은 층의 건물일수록 흔들림이 크게 오래 지속될 수 있으므로 실내에서 떨어지는 물건에 더욱 주의하여야 한다.<br>
+          ✔ 해일 발생 시 1층보다는 2층, 2층보다는 3층, 때에 따라서는 지붕이 안전하니 높은 곳으로 이동하고 목조주택은 떠내려갈 가능성이 있으니 벽돌이나 철근콘크리트 건물로 이동한다.<br>
+          ✔ 해안에서 멀리 떨어진 곳은 직접적인 파도의 영향이 없으므로 바닥에서 높이가 2~3m만 높아도 비교적 안전한다.<br>
 
         </div>
 
