--- a/checklist/typhoon.html
+++ b/checklist/typhoon.html
@@ -209,7 +209,7 @@
       </div>
 
       <div class="cehcklist-content p-5">
-        <div class="content-title flex justify-between">
+        <div class="content-title flex justify-between mb-5">
           <div>
             <p class="text-2xl">
               <span class="font-bold">태풍/강풍</span> <br />
@@ -218,17 +218,17 @@
           </div>
         </div>
 
-        <div class="main-article pt-4">
-1. 태풍의 진로 및 도달 시간을 파악해서 어떻게 대피할지를 생각한다. <br>
-2. 산간·계곡, 하천, 방파제 등 위험지역에서는 주변에 있는 사람들과 함께 안전한 곳으로 이동한다.<br>
-3. 주택이나 차량, 시설물 등의 보호를 위해 가족이나 지역주민과 함께 미리 준비하고 신속한 대피를 위해 응급용품은 미리 배낭에 넣어둔다.<br>
-4. 강풍으로 인해 피해를 입지 않도록 가급적 욕실과 같이 창문이 없는 방이나 집안의 제일 안쪽으로 이동하고 건물의 출입문, 창문에서 최대한 멀리 떨어지도록 한다.<br>
-5.  가스 누출로 2차 피해가 발생할 수 있으므로 미리 차단하고, 감전 위험이 있는 집 안팎의 전기시설은 만지지 않고 정전이 발생한 경우 양초를 사용하지 말고 휴대용 랜턴, 휴대폰 등을 사용한다.<br>
-6. 이 빠져나가고 있을 때에는 기름이나 동물 사체 등 오염된 경우가 많으므로 물에서 멀리 떨어져 있도록 한다.<br>
-7. 태풍으로 피해를 입은 주택 등은 가스가 누출될 수 있으므로 창문을 열어 충분히 환기하고, 성냥불이나 라이터는 환기 전까지 사용하지 않는다.<br>
-8. 고립된 지역에서는 무리하게 물을 건너지 말고, 119에 신고하거나 주변에 도움을 요청한다.<br>
-9. 족과 지인에게 연락하여 안전 여부를 확인하고, 연락이 되지 않고 실종이 의심될 경우에는 가까운 경찰서에 신고한다.<br>
-10. 파손된 시설물(주택, 상하수도, 축대, 도로 등)은 가까운 시·군·구청이나 행정복지센터(주민센터)에 신고한다.<br>
+        <div class="main-article pt-4 mb-5">
+          ✔ 태풍의 진로 및 도달 시간을 파악해서 어떻게 대피할지를 생각한다. <br>
+          ✔ 산간·계곡, 하천, 방파제 등 위험지역에서는 주변에 있는 사람들과 함께 안전한 곳으로 이동한다.<br>
+          ✔ 주택이나 차량, 시설물 등의 보호를 위해 가족이나 지역주민과 함께 미리 준비하고 신속한 대피를 위해 응급용품은 미리 배낭에 넣어둔다.<br>
+          ✔ 강풍으로 인해 피해를 입지 않도록 가급적 욕실과 같이 창문이 없는 방이나 집안의 제일 안쪽으로 이동하고 건물의 출입문, 창문에서 최대한 멀리 떨어지도록 한다.<br>
+          ✔  가스 누출로 2차 피해가 발생할 수 있으므로 미리 차단하고, 감전 위험이 있는 집 안팎의 전기시설은 만지지 않고 정전이 발생한 경우 양초를 사용하지 말고 휴대용 랜턴, 휴대폰 등을 사용한다.<br>
+          ✔ 이 빠져나가고 있을 때에는 기름이나 동물 사체 등 오염된 경우가 많으므로 물에서 멀리 떨어져 있도록 한다.<br>
+          ✔ 태풍으로 피해를 입은 주택 등은 가스가 누출될 수 있으므로 창문을 열어 충분히 환기하고, 성냥불이나 라이터는 환기 전까지 사용하지 않는다.<br>
+          ✔ 고립된 지역에서는 무리하게 물을 건너지 말고, 119에 신고하거나 주변에 도움을 요청한다.<br>
+          ✔ 족과 지인에게 연락하여 안전 여부를 확인하고, 연락이 되지 않고 실종이 의심될 경우에는 가까운 경찰서에 신고한다.<br>
+          ✔ 파손된 시설물(주택, 상하수도, 축대, 도로 등)은 가까운 시·군·구청이나 행정복지센터(주민센터)에 신고한다.<br>
 
         </div>
 
