--- a/checklist/rain.html
+++ b/checklist/rain.html
@@ -206,7 +206,7 @@
       </div>
 
       <div class="cehcklist-content p-5">
-        <div class="content-title flex justify-between">
+        <div class="content-title flex justify-between mb-5">
           <div>
             <p class="text-2xl">
               <span class="font-bold">호우/홍수/침수</span> <br />
@@ -215,17 +215,17 @@
           </div>
         </div>
 
-        <div class="main-article pt-4">
-          1. 기상특보나 홍수, 산사태 등 재난 예·경보를 수신할 수 있도록 TV, 라디오 등을 준비하고 스마트폰에 ‘안전디딤돌’ 앱 등을 미리 설치한다.<br>
-          2. 자주 물에 잠기는 지역, 산사태 위험지역 등의 위험한 곳은 피하고 안전한 곳으로 대피한다.<br>
-          3. 실내에서는 문과 창문을 닫고, 외출을 하지 않고 TV, 라디오, 인터넷 등을 통해 기상상황을 확인한다.<br>
-          4. 개울가, 하천변, 해안가 등 침수 위험지역은 급류에 휩쓸릴 수 있으니 가까이 가지 않는다.<br>
-          5. 산과 계곡의 등산객은 계곡이나 비탈면 가까이 가지 않고 안전한 곳으로 대피한다.<br>
-          6. 차수판 설치, 모래주머니 및 양수기 등을 비치하고 차수판·모래주머니를 신속히 설치할 수 있도록 수방자재 설치자 사전관리한다.<br>
-          7. 차량이 침수되기 시작하면 타이어 높이의 2/3 이상 잠기기 전에 차량을 안전한 곳으로 이동시키고, 차량이 침수된 상황에서 외부 수압으로 문이 열리지 않을 때는 좌석 목받침 하단 철재봉을 이용하여 유리창을 깨서 대피한다.<br>
-          8. 침수주택은 가스·전기차단기가 off에 있는지 확인하고, 기술자의 안전조사가 끝난 후 사용한다.<br>
-          9. 홍수 예상 시 전기차단기를 내리고 가스 밸브를 잠근다.<br>
-          10. 비탈면이나 산사태가 일어날 수 있는 지역에 가까이 가지않는다.<br>
+        <div class="main-article pt-4 mb-5">
+          ✔ 기상특보나 홍수, 산사태 등 재난 예·경보를 수신할 수 있도록 TV, 라디오 등을 준비하고 스마트폰에 ‘안전디딤돌’ 앱 등을 미리 설치한다.<br>
+          ✔ 자주 물에 잠기는 지역, 산사태 위험지역 등의 위험한 곳은 피하고 안전한 곳으로 대피한다.<br>
+          ✔ 실내에서는 문과 창문을 닫고, 외출을 하지 않고 TV, 라디오, 인터넷 등을 통해 기상상황을 확인한다.<br>
+          ✔ 개울가, 하천변, 해안가 등 침수 위험지역은 급류에 휩쓸릴 수 있으니 가까이 가지 않는다.<br>
+          ✔ 산과 계곡의 등산객은 계곡이나 비탈면 가까이 가지 않고 안전한 곳으로 대피한다.<br>
+          ✔ 차수판 설치, 모래주머니 및 양수기 등을 비치하고 차수판·모래주머니를 신속히 설치할 수 있도록 수방자재 설치자 사전관리한다.<br>
+          ✔ 차량이 침수되기 시작하면 타이어 높이의 2/3 이상 잠기기 전에 차량을 안전한 곳으로 이동시키고, 차량이 침수된 상황에서 외부 수압으로 문이 열리지 않을 때는 좌석 목받침 하단 철재봉을 이용하여 유리창을 깨서 대피한다.<br>
+          ✔ 침수주택은 가스·전기차단기가 off에 있는지 확인하고, 기술자의 안전조사가 끝난 후 사용한다.<br>
+          ✔ 홍수 예상 시 전기차단기를 내리고 가스 밸브를 잠근다.<br>
+          ✔ 비탈면이나 산사태가 일어날 수 있는 지역에 가까이 가지않는다.<br>
 
 
         </div>
