--- a/checklist/safety.html
+++ b/checklist/safety.html
@@ -206,7 +206,7 @@
       </div>
 
       <div class="cehcklist-content p-5">
-        <div class="content-title flex justify-between">
+        <div class="content-title flex justify-between mb-5">
           <div>
             <p class="text-2xl">
               <span class="font-bold">안전/테러</span> <br />
@@ -215,17 +215,18 @@
           </div>
         </div>
 
-        <div class="main-article pt-4">
-1. 터널 내에서 화재가 발생했을시엔 재빨리 연기 반대방향으로 터널 내 유도표시등을 따라 밖이나 피난연결통로를 통해 옆 터널로 대피한다. <br>
-2. 터널 내에서 차량사고/고장이 발생했을시엔 차량을 갓길이나 비상주차대 쪽으로 주차하고 엔진을 끄고 키를 꽂아둔 채 하차한다.<br>
-3. 응급처치시엔 이성적인 결정을 내릴 수 있는 법적인 성인에게는 사전 동의를 얻어야 한다. 처치자는 자신의 이름을 대고 응급처치 교육을 받았음을 밝혀야 한다. 그리고 앞으로 실시할 응급처치에 대해 설명을 해야 한다. <br>
-4. 폭발물 테러시에 폭발음이 들리면 즉시 바닥에 엎드리고, 양팔과 팔꿈치를 붙여 가슴을 보호하고, 귀와 머리를 손으로 감싸 두개골 보호한다.<br>
-5. 폭발물 테러시에 폭발이 종료되어도 연쇄 폭발이 있을 수 있으므로 좀 더 엎드려 있다가 폭발지점 반대 방향으로 신속히 대피한다.<br>
-6. 비상사태발생시에는 단전·단수에 대비하여 손전등, 양초, 라이터(성냥)를 준비하고, 욕조나 큰 그릇에 물을 받아 두고 아껴 써야 합니다. <br>
-7. 비상사태발생시에는 통화량 급증으로 통신망이 마비되지 않도록 불필요한 전화 사용은 자제합니다. <br>
-8. 공습·포격 시에는 민방위 대피소, 지하철역, 지하 주차장, 대형건물 지하시설등으로 대피한다.<br>
-9. 핵·방사능과 관련된 비상사태시에는 방풍문이 설치된 민방위 대피소, 지하상가, 지하철, 건물 지하로로 대피한다.<br>
-10. 생물·화학 무기 관련된 비상사태시에는 외부공기 유입을 차단할 수 있는 대피장소, 공기순환·정화 시설을 갖춘 대피시설(지하철,지하상가 등) 방화문이 설치되어 있는 건물, 야외에서 신속히 대피할 경우 고지대, 건물 고층의 실내로 대피한다.<br>
+        <div class="main-article pt-4  mb-5">
+          ✔ 터널 내에서 화재가 발생했을시엔 재빨리 연기 반대방향으로 터널 내 유도표시등을 따라 밖이나 피난연결통로를 통해 옆 터널로 대피한다. <br>
+          ✔ 터널 내에서 차량사고/고장이 발생했을시엔 차량을 갓길이나 비상주차대 쪽으로 주차하고 엔진을 끄고 키를 꽂아둔 채 하차한다.<br>
+          ✔ 응급처치시엔 이성적인 결정을 내릴 수 있는 법적인 성인에게는 사전 동의를 얻어야 한다. 처치자는 자신의 이름을 대고 응급처치 교육을 받았음을 밝혀야 한다. 그리고 앞으로 실시할 응급처치에 대해 설명을 해야 한다. <br>
+          ✔ 폭발물 테러시에 폭발음이 들리면 즉시 바닥에 엎드리고, 양팔과 팔꿈치를 붙여 가슴을 보호하고, 귀와 머리를 손으로 감싸 두개골 보호한다.<br>
+          ✔ 폭발물 테러시에 폭발이 종료되어도 연쇄 폭발이 있을 수 있으므로 좀 더 엎드려 있다가 폭발지점 반대 방향으로 신속히 대피한다.<br>
+          ✔ 비상사태발생시에는 단전·단수에 대비하여 손전등, 양초, 라이터(성냥)를 준비하고, 욕조나 큰 그릇에 물을 받아 두고 아껴 써야 합니다. <br>
+          ✔ 비상사태발생시에는 통화량 급증으로 통신망이 마비되지 않도록 불필요한 전화 사용은 자제합니다. <br>
+          ✔ 공습·포격 시에는 민방위 대피소, 지하철역, 지하 주차장, 대형건물 지하시설등으로 대피한다.<br>
+          ✔ 핵·방사능과 관련된 비상사태시에는 방풍문이 설치된 민방위 대피소, 지하상가, 지하철, 건물 지하로로 대피한다.<br>
+          ✔ 생물·화학 무기 관련된 비상사태시에는 외부공기 유입을 차단할 수 있는 대피장소, 공기순환·정화 시설을 갖춘 대피시설(지하철,지하상가 등) 방화문이 설치되어 있는 건물, 야외에서 신속히 대피할 경우 고지대, 건물 고층의 실내로 대피한다.<br>
+          <br>
 
         </div>
 
