--- a/map.html
+++ b/map.html
@@ -298,5 +298,6 @@
     ></script>
     <script src="../js/jmap.js"></script>
     <script src="../js/isLoggedin.js"></script>
+    <script src="../js/ymap.js"></script>
   </body>
 </html>
