--- a/map.html
+++ b/map.html
@@ -298,6 +298,7 @@
     ></script>
    
     <script src="../js/isLoggedin.js"></script>
-    <script src="../js/ymap.js"></script>
+    <!-- <script src="../js/ymap.js"></script> -->
+    <script src="../js/jmap.js"></script>
   </body>
 </html>
