--- a/map.html
+++ b/map.html
@@ -227,14 +227,14 @@
             <button
               id="earth"
               class="h-8 bg-yellow-600 item-center rounded-full text-xs ml-5 px-4 p-2 text-white font-bold"
-              onclick="earthquake()"
+              
             >
               지진/해일
             </button>
             <button
               id="civil"
               class="h-8 bg-red-400 item-center rounded-full text-xs ml-5 px-4 p-2 text-white font-bold"
-              onclick="civil()"
+              
             >
               민방위
             </button>
@@ -245,7 +245,7 @@
         <div id="modal" class="bg-white">
           <div class="content_map">
             <div class="ml-auto">
-              <button onclick="out()" class="p-2">
+              <button  class="p-2">
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
                   width="14"
