--- a/map.html
+++ b/map.html
@@ -216,7 +216,7 @@
             <div class="font-bold text-2xl" id="current_city">현재 지역</div>
             <div class="text-lg mt-1">주변 대피소를 확인해보세요.</div>
           </div>
-          <div class="flex mb-2 mt-2 mb-1">
+          <div class="choice flex mb-2 mt-2 mb-1">
             <button
               id="all"
               class="h-8 bg-gray-600 item-center rounded-full text-xs px-4 p-2 text-white font-bold"
