--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>메인 브랜치로 이사했습니다. 그동안 사랑해 주셔서 감사합니</h1>
-    <h1>CI/CD 테스트입니다야물</h1>
+    <h1>CI/CD 테스트입니다야물야물</h1>
   </body>
 </html>
